Actualizado: SEO y etiquetas meta

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Agrego SEO -->
+    <meta name="keywords" content="pokémon, tienda, videojuegos, gameboy, nintendo, pokemon">
+    <meta name="description" content="Tienda Pokémon, dónde podés comprar los mejores juegos de la saga.">
+    <!-- Agrego una pre-visualización de mi sitio -->
+    <meta name="og: title" content="Tienda Pokémon">
+    <meta name="og: description" content="Comprá los mejores juegos de Pokémon.">
+    <meta name="og: image" content="https://i.imgur.com/TvOT3DG.jpg">
+    <meta name="og: url" content="https://matiastanans.github.io/PreEntregasTanans-JS-/">
     <!-- Agrego favicon a mi sitio web -->
     <link rel="shortcut icon" href="./assets/img/pokemon.png">
     <title>Inicio | Tienda Pokémon</title>
